fix aside on mobile

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -12,7 +12,7 @@ $breakpoint-sm: 576px;
 
 @font-face {
   font-family: "primary-font-extrabold";
-  src: url("../assets/fonts/Poppins/Poppins-extraBold.ttf");
+  src: url("@/assets/fonts/Poppins/Poppins-extraBold.ttf");
 }
 
 @font-face {
